--- a/public/themes/quick-start/front/style.css
+++ b/public/themes/quick-start/front/style.css
@@ -76,3 +76,15 @@ body {background: #fff; color: #555; font-family: tahoma,Geneva,Arial,Helvetica,
 .area-navigation ul ul li {background: #bababa !important; margin: 0; min-width: 160px;}
 .area-navigation ul ul li:hover {background: #aaa !important;}
 .area-navigation ul ul ul {left: 100%; top: 0;}
+
+/* article tools (edit, delete article) */
+.each-post:hover > .article-tools {display: block;}
+.post-page:hover > .article-tools {display: block;}
+.article-tools {display: none; height: 0; margin: 0; padding: 0; position: relative;}
+.article-tools .tools-start {background: url('images/web-icons.png') -112px -20px no-repeat; cursor: pointer; height: 16px; position: absolute; right: 0; width: 16px; z-index: 5;}
+.article-tools .tools-start:hover {background: url('images/web-icons.png') -112px -36px no-repeat;}
+.article-tools .tools-start:hover > .tools-container {display: block;}
+.article-tools .tools-start .tools-container {display: none; height:16px; padding-top: 3px; position: relative;}
+.article-tools .tools-start ul {background: #eee; border-radius: 5px; box-shadow: 0 1px 3px #555; list-style: none; margin: 16px 0 0 0; padding: 0; width: 26px;}
+.article-tools .tools-start ul li {margin: 0; padding: 5px 5px 0 5px;}
+.article-tools .tools-start ul li:last-child {padding-bottom: 3px;}
